fix spacing

--- a/app/components/Transfers/TransferView/TransferView.module.scss
+++ b/app/components/Transfers/TransferView/TransferView.module.scss
@@ -2,17 +2,17 @@
     position: relative;
     display: flex;
     flex-direction: column;
-    padding: 5px 60px;
+    padding: 25px 50px;
 }
 
 .closeButton {
     position: absolute;
-    top: 20px;
-    right: 20px;
+    top: 25px;
+    right: 25px;
 }
 
 .backButton {
     position: absolute;
-    top: 20px;
-    left: 20px;
+    top: 25px;
+    left: 25px;
 }
